Add Feed Dialog

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -10,5 +10,6 @@
         <file>qml/FeedListDrawer.qml</file>
         <file>qml/AboutPage.qml</file>
         <file>qml/PageDisplayDialog.qml</file>
+        <file>qml/AddFeedPage.qml</file>
     </qresource>
 </RCC>
