--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -16,5 +16,7 @@
         <file>qml/Placeholders/UpdatingPlaceholderPage.qml</file>
         <file>qml/Placeholders/EmptyFeedPlaceholderPage.qml</file>
         <file>qml/OverlayMessage.qml</file>
+        <file>qml/ArticleList/AbstractArticleListPage.qml</file>
+        <file>qml/ArticleList/FeedPreviewPage.qml</file>
     </qresource>
 </RCC>
