--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
+        <file>qtquickcontrols2.conf</file>
         <file>qml/main.qml</file>
         <file>qml/ArticleList/ArticleListPage.qml</file>
         <file>qml/ArticleList/EmptyFeedOverlay.qml</file>
