android adaptive icon

--- a/android/res/drawable/icon.xml
+++ b/android/res/drawable/icon.xml
@@ -49,91 +49,6 @@
             </gradient>
         </aapt:attr>
     </path>
-    <group
-        android:scaleX="0.2645833"
-        android:scaleY="0.2645833">
-        <path
-            android:pathData="M32 14c-0.554 0 -0.998878 0.400386 -1 0.898438V36H8.0000005c-0.554 0 -0.9999999 0.400385 -1 0.898438l-0.0000008 4.203124c-0.0000001 0.498053 0.446 0.898438 1 0.898438H40.001953c0.554 0 1 -0.400385 1 -0.898438C40.993823 32.189682 40.999401 22.683559 41 14.898438 41 14.400385 40.554 14 40 14Z"
-            android:fillType="evenOdd"
-            android:fillColor="#C9CE3B" />
-    </group>
-    <path
-        android:pathData="M1.9384025 8.6145186L4.5842358 11.260352 11.528 11.20566V8.5598624L7.2950781 3.7972962Z"
-        android:fillType="evenOdd">
-        <aapt:attr
-            name="android:fillColor">
-            <gradient
-                android:startX="1.938403"
-                android:startY="8.614519"
-                android:endX="4.584236"
-                android:endY="11.26035"
-                android:tileMode="clamp">
-                <item
-                    android:color="#4D000000"
-                    android:offset="0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:pathData="M1.671638 1.5875H11.02836A0.08413751 0.0841375 0 0 1 11.1125 1.671637V3.090862A0.08413751 0.0841375 0 0 1 11.02836 3.175H1.671638A0.08413751 0.0841375 0 0 1 1.587501 3.090862V1.671637A0.08413751 0.0841375 0 0 1 1.671638 1.5875Z"
-        android:fillType="evenOdd">
-        <aapt:attr
-            name="android:fillColor">
-            <gradient
-                android:startX="7.672917"
-                android:startY="3.175"
-                android:endX="7.672917"
-                android:endY="2.116667"
-                android:tileMode="clamp">
-                <item
-                    android:color="#1D99F3"
-                    android:offset="0" />
-                <item
-                    android:color="#3DAEE9"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:pathData="M2.200804 3.96875H7.059945A0.08413751 0.0841375 0 0 1 7.144083 4.052887V8.382479A0.08413751 0.0841375 0 0 1 7.059945 8.466616H2.200804A0.08413751 0.0841375 0 0 1 2.116667 8.382479V4.052887A0.08413751 0.0841375 0 0 1 2.200804 3.96875Z"
-        android:fillType="evenOdd"
-        android:strokeWidth="0.529">
-        <aapt:attr
-            name="android:fillColor">
-            <gradient
-                android:startX="5.55625"
-                android:startY="8.466667"
-                android:endX="5.55625"
-                android:endY="4.497917"
-                android:tileMode="clamp">
-                <item
-                    android:color="#D35400"
-                    android:offset="0" />
-                <item
-                    android:color="#F39C1F"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
-        <aapt:attr
-            name="android:strokeColor">
-            <gradient
-                android:startX="5.55625"
-                android:startY="8.466667"
-                android:endX="5.55625"
-                android:endY="4.497917"
-                android:tileMode="clamp">
-                <item
-                    android:color="#D35400"
-                    android:offset="0" />
-                <item
-                    android:color="#F39C1F"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
-    </path>
     <path
         android:pathData="M12.170088 1.9768153c-0.0013 0.9852988 -0.528421 9.6648517 -0.528421 9.6648517 0 0 0.265064 0.000294 0 0V1.8520833l0.148915 0.00125c0.187374 -0.00133 0.386856 0.2034211 0.37947 0.3880653z"
         android:fillType="evenOdd">
@@ -154,7 +69,75 @@
             </gradient>
         </aapt:attr>
     </path>
+    <group
+        android:scaleX="0.2645833"
+        android:scaleY="0.2645833">
+        <path
+            android:pathData="M32 14c-0.553942 0.008 -0.998878 0.400386 -1 0.898438L31 35H8.9999996c-0.554 0 -0.9999999 0.400385 -1 0.898438l-0.0000008 4.203124c-0.0000001 0.498053 0.4467724 0.869194 1 0.898438l3.8766772 -0.01312 26.123325 -0.08844c0.553996 -0.0019 1 -0.400385 1 -0.898438 -0.0081 -8.91188 -0.0026 -17.418003 -0.002 -25.203124 0 -0.498053 -0.446059 -0.906478 -1 -0.898438z"
+            android:fillType="evenOdd"
+            android:fillColor="#C9CE3B" />
+    </group>
     <path
-        android:pathData="M2.8716601 4.4690968v0.5829594c1.6193027 0 2.9319257 1.3049547 2.9319257 2.9147972h0.5863853v-0.018364c0 -0.1139686 -0.00762 -0.2258969 -0.018472 -0.3369507 -0.0005878 -0.00611 0.0005876 -0.012243 0 -0.018363 -0.011435 -0.1110534 -0.033424 -0.2203583 -0.055121 -0.3279143 -0.00117 -0.00584 0.00117 -0.012535 0 -0.018363C6.2471851 6.909657 6.1278563 6.5934014 5.9680666 6.2995899c-0.00117 -0.00234 0.00117 -0.007 0 -0.00904C5.534435 5.4965629 4.8002809 4.8920339 3.9157189 4.623581 3.8110491 4.5912269 3.7034475 4.5641193 3.5949661 4.5416753c-0.00587 -0.00116 -0.012606 0.00116 -0.018471 0 -0.1087748 -0.022154 -0.2178424 -0.042847 -0.3298418 -0.054798 -0.00616 -0.0005829 -0.012314 0.000583 -0.018472 0C3.1158892 4.4755089 3.0041828 4.4693878 2.8892512 4.4685134h-0.018472m0 1.1659189v0.5829592c0.9716401 0 1.7591555 0.7829144 1.7591555 1.7488784h0.5863855c0 -1.2877575 -1.0502159 -2.3318379 -2.3455406 -2.3318379m0.5863849 1.1659189c-0.3239776 0 -0.5863851 0.2608744 -0.5863851 0.5829594 0 0.322085 0.2624075 0.5829595 0.5863851 0.5829595 0.323978 0 0.5863853 -0.2608745 0.5863853 -0.5829595 0 -0.322085 -0.2624073 -0.5829594 -0.5863853 -0.5829594"
+        android:pathData="M2.1823958 8.6415626L4.828229 11.022813 11.792583 11.20566 11.82123 8.5370459 7.5883083 3.7744797Z"
+        android:fillType="evenOdd">
+        <aapt:attr
+            name="android:fillColor">
+            <gradient
+                android:startX="2.182396"
+                android:startY="8.641563"
+                android:endX="4.828229"
+                android:endY="11.2874"
+                android:tileMode="clamp">
+                <item
+                    android:color="#4D000000"
+                    android:offset="0" />
+                <item
+                    android:color="#00000000"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:pathData="M1.936221 1.852083H10.76378A0.08413751 0.0841375 0 0 1 10.84792 1.936221V3.090862A0.08413751 0.0841375 0 0 1 10.76378 3.175H1.936221A0.08413751 0.0841375 0 0 1 1.852083 3.090862V1.936221A0.08413751 0.0841375 0 0 1 1.936221 1.852083Z"
+        android:fillType="evenOdd">
+        <aapt:attr
+            name="android:fillColor">
+            <gradient
+                android:startX="7.599421"
+                android:startY="3.175"
+                android:endX="7.599421"
+                android:endY="2.293055"
+                android:tileMode="clamp">
+                <item
+                    android:color="#1D99F3"
+                    android:offset="0" />
+                <item
+                    android:color="#3DAEE9"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:pathData="M2.38125 3.704167H7.408334A0.2645834 0.2645833 0 0 1 7.672917 3.96875V8.466666A0.2645834 0.2645833 0 0 1 7.408334 8.73125H2.38125A0.2645834 0.2645833 0 0 1 2.116667 8.466666V3.96875A0.2645834 0.2645833 0 0 1 2.38125 3.704167Z"
+        android:fillType="evenOdd">
+        <aapt:attr
+            name="android:fillColor">
+            <gradient
+                android:startX="5.91806"
+                android:startY="8.731306"
+                android:endX="5.91806"
+                android:endY="4.295595"
+                android:tileMode="clamp">
+                <item
+                    android:color="#D35400"
+                    android:offset="0" />
+                <item
+                    android:color="#F39C1F"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:pathData="M3.1362434 4.4690971v0.5829594c1.6193027 0 2.9319257 1.3049547 2.9319257 2.9147972h0.5863853v-0.018364c0 -0.1139686 -0.00762 -0.2258969 -0.018472 -0.3369507 -0.0005878 -0.00611 0.0005876 -0.012243 0 -0.018363 -0.011435 -0.1110534 -0.033424 -0.2203583 -0.055121 -0.3279143 -0.00117 -0.00584 0.00117 -0.012535 0 -0.018363 -0.069193 -0.3372414 -0.1885218 -0.653497 -0.3483115 -0.9473085 -0.00117 -0.00234 0.00117 -0.007 0 -0.00904C5.7990183 5.4965632 5.0648642 4.8920342 4.1803022 4.6235813 4.0756324 4.5912272 3.9680308 4.5641196 3.8595494 4.5416756c-0.00587 -0.00116 -0.012606 0.00116 -0.018471 0 -0.1087748 -0.022154 -0.2178424 -0.042847 -0.3298418 -0.054798 -0.00616 -0.0005829 -0.012314 0.000583 -0.018472 0C3.3804725 4.4755092 3.2687661 4.4693881 3.1538345 4.4685137h-0.018472m0 1.1659189v0.5829592c0.9716401 0 1.7591555 0.7829144 1.7591555 1.7488784h0.5863855c0 -1.2877575 -1.0502159 -2.3318379 -2.3455406 -2.3318379m0.5863849 1.1659189c-0.3239776 0 -0.5863851 0.2608744 -0.5863851 0.5829594 0 0.322085 0.2624075 0.5829595 0.5863851 0.5829595 0.323978 0 0.5863853 -0.2608745 0.5863853 -0.5829595 0 -0.322085 -0.2624073 -0.5829594 -0.5863853 -0.5829594"
         android:fillColor="#000000" />
 </vector>
