--- a/androidstyleplugin/androidstyleplugin.qrc
+++ b/androidstyleplugin/androidstyleplugin.qrc
@@ -1,3 +1,7 @@
+<!--
+SPDX-FileCopyrightText: 2022 Connor Carney <hello@connorcarney.com>
+SPDX-License-Identifier: GPL-3.0-or-later
+-->
 <RCC>
     <qresource prefix="/">
         <file>qml/materialhelper.qml</file>
