--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,3 +1,7 @@
+<!--
+SPDX-FileCopyrightText: 2022 Connor Carney <hello@connorcarney.com>
+SPDX-License-Identifier: GPL-3.0-or-later
+-->
 <RCC>
     <qresource prefix="/">
         <file>qtquickcontrols2.conf</file>
