New Starred Items Page
Use a separate page for the starred items feed, which doesn't include
the never-enabled "Mark All Read" button and uses a separate setting
for the unread filter.

Fixes #177

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -26,5 +26,6 @@
         <file>qml/ArticleList/SearchResultPage.qml</file>
         <file>qml/ArticleList/AbstractFeedPage.qml</file>
         <file>qml/ArticleList/OverviewPage.qml</file>
+        <file>qml/ArticleList/StarredItemsPage.qml</file>
     </qresource>
 </RCC>
