Rework settings for downloading web content
Replaces the checkbox in settings "Download web content for offline
viewing" with a new dialog box to select both the specific feeds that use
web content *and* the strategy for downloading it.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -27,5 +27,6 @@
         <file>qml/ArticleList/AbstractFeedPage.qml</file>
         <file>qml/ArticleList/OverviewPage.qml</file>
         <file>qml/ArticleList/StarredItemsPage.qml</file>
+        <file>qml/ReadableContentSettingsDialog.qml</file>
     </qresource>
 </RCC>
